# Discord-Voice-Frontend

./: .env.example  .gitignore  README.md
.cargo/: config.toml
python-service/: app.py  conversation_store.py  llm_client.py  logic.py  prompt_builder.py  prompt_config.py  requirements.txt  test_logic.py
rust-bot/: Cargo.toml
rust-bot/src/: audio.rs  main.rs  python_client.rs  speaker_registry.rs
